# Visual_BXDF

./: CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  GLSL.h  Material.h  Shader.h  Transform.cpp  Transform.h  main.cpp
include/imgui/backend/: imgui_impl_glut.cpp  imgui_impl_opengl2.cpp
